--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
  <font size=5 face="Comic Sans MS">Разговорные фразы на японском языке</font>
 </p>
  <p align=center> <img src=""> </p>
-
-</tr>
+<p><img src="WhatsApp Image 2023-05-18 at 13.42.43.jpeg"></p>
 </table>
 </body>
 </html>
