--- a/index(1).html
+++ b/index(1).html
@@ -1,53 +1,55 @@
 <html>
   <head>
-    <title>японский для всех</title>
+    <title>РЇРїРѕРЅСЃРєРёР№ РґР»СЏ РІСЃРµС…</title>
    </head>
   <body bgcolor=#CF5FD3>
 <table>
 <tr>
 <td valign=top width=100> <font size=4 face="Comic Sans MS">
-<a href="index.html">Главная страница</a>
+<a href="index.html">Р“Р»Р°РІРЅР°СЏ СЃС‚СЂР°РЅРёС†Р°</a>
 <br>
-<a href="index(01).html">Азбука</a>
+<a href="index(01).html">РђР·Р±СѓРєР°</a>
 <br>
-<a href="index(1).html">Фразы</a>
+<a href="index(1).html">Р¤СЂР°Р·С‹</a>
 </font>
 </td>
    <p align=center> 
-<font size=7 color=#FFD300 face="Comic Sans MS">Фразы</font>
+<font size=7 color=#FFD300 face="Comic Sans MS">Р¤СЂР°Р·С‹</font>
 </p>
  <p align=center>
- <font size=4 face="Comic Sans MS">Здравствуйте - ????? (коничива)
+ <font size=4 face="Comic Sans MS">Р—РґСЂР°РІСЃС‚РІСѓР№С‚Рµ - гЃ“г‚“гЃ«гЃЎгЃЇ (РєРѕРЅРёС‡РёРІР°)</font></p>
 
 <p align=center>
- <font size=4 face="Comic Sans MS">доброе утро! - ?????????! (охайо газаимас!)
+ <font size=4 face="Comic Sans MS">РґРѕР±СЂРѕРµ СѓС‚СЂРѕ! - гЃЉгЃЇг‚€гЃ†гЃ”гЃ–гЃ„гЃѕгЃ™пјЃ (РѕС…Р°Р№Рѕ РіР°Р·Р°РёРјР°СЃ!)
+</font></p>
 
 <p align=center>
- <font size=4 face="Comic Sans MS">до свидания - ???? (сайонара)
+ <font size=4 face="Comic Sans MS">РґРѕ СЃРІРёРґР°РЅРёСЏ - гЃ•г‚€гЃЄг‚‰ (СЃР°Р№РѕРЅР°СЂР°)</font></p>
 
 <p align=center>
- <font size=4 face="Comic Sans MS">Да - ?? (хай)
+ <font size=4 face="Comic Sans MS">Р”Р° - гЃЇгЃ„ (С…Р°Р№)</font></p>
 
 <p align=center>
- <font size=4 face="Comic Sans MS">Нет - ??? (ие)
+ <font size=4 face="Comic Sans MS">РќРµС‚ - гЃ„гЃ„гЃ€ (РёРµ)</font></p>
 
 <p align=center>
- <font size=4 face="Comic Sans MS">Спасибо - ?????! (аригато)
+ <font size=4 face="Comic Sans MS">РЎРїР°СЃРёР±Рѕ - гЃ‚г‚ЉгЃЊгЃЁгЃ†пјЃ (Р°СЂРёРіР°С‚Рѕ)</font></p>
 
 <p align=center>
- <font size=4 face="Comic Sans MS">Пожалуйста - ?????? (онэгаишимасу)
+ <font size=4 face="Comic Sans MS">РџРѕР¶Р°Р»СѓР№СЃС‚Р° - гЃЉйЎгЃ„гЃ—гЃѕгЃ™ (РѕРЅСЌРіР°РёС€РёРјР°СЃСѓ)
+</font></p>
 
 <p align=center>
- <font size=4 face="Comic Sans MS">прошу прощения - ????? (гомэннасай)
+ <font size=4 face="Comic Sans MS">РїСЂРѕС€Сѓ РїСЂРѕС‰РµРЅРёСЏ - еѕЎе…ЌгЃЄгЃ•гЃ„ (РіРѕРјСЌРЅРЅР°СЃР°Р№)</font></p>
 
 <p align=center>
- <font size=4 face="Comic Sans MS">меня зовут... - ?????... (ши но наэмэ ха)
+ <font size=4 face="Comic Sans MS">РјРµРЅСЏ Р·РѕРІСѓС‚... - з§ЃгЃ®еђЌе‰ЌгЃЇ... (С€Рё РЅРѕ РЅР°СЌРјСЌ С…Р°)</font></p>
 
 <p align=center>
- <font size=4 face="Comic Sans MS">Как твои дела? - ?????? (доу? чикагору)
+ <font size=4 face="Comic Sans MS">РљР°Рє С‚РІРѕРё РґРµР»Р°? - гЃ©гЃ†пјџиї‘гЃ”г‚Ќ (РґРѕСѓ? С‡РёРєР°РіРѕСЂСѓ)</font></p>
 
 <p align=center>
- <font size=4 face="Comic Sans MS">приятного аппетита/спасибо за еду - ?????? (итадакимас) </font>
+ <font size=4 face="Comic Sans MS">РїСЂРёСЏС‚РЅРѕРіРѕ Р°РїРїРµС‚РёС‚Р°/СЃРїР°СЃРёР±Рѕ Р·Р° РµРґСѓ - гЃ©гЃ†пјџиї‘гЃ”г‚Ќ (РёС‚Р°РґР°РєРёРјР°СЃ)  </font>
 </p>
 </body>
 </html
